<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_new_route"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/large_content_space"
    android:paddingRight="@dimen/large_content_space"
    android:paddingTop="@dimen/large_content_space"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/dialog_news_place_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_news_place_title"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor,RtlHardcoded" />

    <EditText
        android:id="@+id/dialog_news_place_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_news_place_description"
        android:inputType="textMultiLine"
        tools:ignore="Autofill,LabelFor,RtlHardcoded" />

    <EditText
        android:id="@+id/dialog_news_tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_news_title"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor,RtlHardcoded" />

    <EditText
        android:id="@+id/dialog_news_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_news_descripttion"
        android:inputType="textMultiLine"
        tools:ignore="Autofill,LabelFor,RtlHardcoded" />

</LinearLayout>