<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_empty_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/content_space"
    android:paddingBottom="@dimen/content_space">

    <ImageView
        android:layout_width="@dimen/empty_view_size_image"
        android:layout_height="@dimen/empty_view_size_image"
        android:layout_gravity="center"
        android:contentDescription="@string/image_stops_title"
        android:src="@drawable/ic_marker_in_map" />

    <TextView
        android:id="@+id/message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/large_content_space"
        android:layout_marginTop="@dimen/content_space"
        android:layout_marginRight="@dimen/large_content_space"
        android:gravity="center"
        android:text="@string/empty_view_error_message_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/fontColor"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/message_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/large_content_space"
        android:layout_marginRight="@dimen/large_content_space"
        android:layout_marginBottom="@dimen/large_content_space"
        android:gravity="center"
        android:text="@string/empty_view_error_message_description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

</LinearLayout>