<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewInterlocalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_top_image_new_complaint">
            <ImageView
                android:id="@+id/image_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/image_view_content_description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_message_of_image_view"
                android:background="@color/littleOpacityBlack"
                android:orientation="horizontal"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/message_of_image_view_new_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/content_space"
                    android:text="@string/message_of_image_view_new_bus"
                    android:layout_marginRight="@dimen/content_space"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/content_space">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_space"
                android:layout_marginRight="@dimen/content_space"
                android:text="@string/information_new_bus_message"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/content_space"
                android:layout_marginRight="@dimen/content_space">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bus__plate_number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/content_space"
                android:layout_marginRight="@dimen/content_space">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bus_driver_name" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>