<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/item_type_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        style="?android:attr/borderlessButtonStyle"
        android:paddingLeft="@dimen/large_content_space"
        android:paddingRight="@dimen/large_content_space"
        android:paddingTop="@dimen/content_space"
        android:paddingBottom="@dimen/content_space"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/type_news_image"
            android:layout_width="@dimen/small_image_profile"
            android:layout_height="@dimen/small_image_profile"
            android:contentDescription="@string/image_stops_title"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_space"
            android:layout_marginStart="@dimen/content_space"
            android:orientation="vertical">

            <TextView
                android:id="@+id/type_news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_of_types_uses"
                android:layout_gravity=""
                android:textColor="@color/blackColor"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

            <TextView
                android:id="@+id/type_news_description"
                android:textColor="@color/grayBlackColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_description"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>