<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewComplaint"
    tools:menu="@menu/new_complaint_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_top_image_new_complaint">
            <ImageView
                android:id="@+id/image_complaint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/image_view_content_description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_message_of_image_view"
                android:background="@color/littleOpacityBlack"
                android:orientation="horizontal"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/message_of_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/content_space"
                    android:text="@string/message_of_image_view"
                    android:layout_marginRight="@dimen/content_space"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ddf1fc"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/new_complaint_user_profile"
                android:layout_width="@dimen/small_image_profile"
                android:layout_height="@dimen/small_image_profile"
                android:layout_margin="@dimen/content_space"
                android:src="@drawable/profile_example"
                app:civ_border_color="@color/placeHolderImage"
                app:civ_border_width="@dimen/border_width"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/content_space">
                <TextView
                    android:id="@+id/new_complaint_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                    android:text="@string/default_name_user"/>
                <TextView
                    android:id="@+id/new_complaint_user_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_to_user"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/content_space">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/new_complaint_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_complaint_title"
                    android:inputType="textAutoComplete"
                    app:backgroundTint="@color/colorPrimaryDark"
                    tools:ignore="Autofill,RtlHardcoded"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/new_complaint_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_description"
                    app:backgroundTint="@color/colorPrimaryDark"
                    android:inputType="textMultiLine"
                    tools:ignore="Autofill,RtlHardcoded"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
